fav-person-birthday-special

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 
         <!-- PAGE 4: Her Favorite Star -->
         <section id="page4" class="page">
-            <h2 class="page-title">Ur two most Favorite 💖</h2>
+            <h2 class="page-title">Unaku Pudicha Rendu peru 💖 🕉️✨Lord Shiva 🎬Dhanush </h2>
             <div class="page-content sparkle-container">
                 <p>There’s a calm strength in you
                     that always reminds me of Lord Shiva 🕉️
